# portfolio_inKETI

./: README.md
Codes/Secure_OTA(과제명)/Secure_OTA/: CMakeLists.txt
Codes/Secure_OTA(과제명)/Secure_OTA/src/app/relayserver_test/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Secure_OTA(과제명)/Secure_OTA/src/app/relayserver_test/src/: relay_test_app.c
Codes/Secure_OTA(과제명)/Secure_OTA/src/app/remove/: CMakeLists.txt  Makefile  cmake_install.cmake  remove.c
Codes/Secure_OTA(과제명)/Secure_OTA/src/app/test_app/: Http_Test.c  http_test  job_task.c
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/include/: memory_allocation_include.h  protobuf.pb-c.h  protobufabs.h
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/memory_allocation/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/memory_allocation/src/: memory_allocation.c  memory_allocation_api.h  memory_allocation_param.h
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/parson/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/protobuf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/protobuf/src/: protobuf.proto  protobufabs.c  protobufabs.h
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/relayserver/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Secure_OTA(과제명)/Secure_OTA/src/lib/relayserver/src/: librelayserver.c  librelayserver.h
Codes/Smart Edge Data/Code/: CMakeLists.txt  build.ninja
Codes/Smart Edge Data/Code/src/app/udmem_kadap/: CMakeLists.txt  Makefile  cmake_install.cmake  udmem_kadap
Codes/Smart Edge Data/Code/src/app/udmem_kadap/src/: udmem_kadap.c  udmem_kadap.h  udmem_kadap_input_params.c
Codes/Smart Edge Data/Code/src/app/upload/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Smart Edge Data/Code/src/app/upload/src/: keti_upload.c
Codes/Smart Edge Data/Code/src/lib/sed_upload_keti/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Smart Edge Data/Code/src/lib/sed_upload_keti/include/: sed_azure.h  sed_buffer.h  sed_json.h
Codes/Smart Edge Data/Code/src/lib/sed_upload_keti/src/: sed_azure.c  sed_buffer.c  sed_json.c
Codes/Smart Edge Data/Code/utils/python_upload_test(x86_64)/: keti_upload.py
Codes/V2X-HUB/Code/common/lib/kvhredis/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/V2X-HUB/Code/common/lib/kvhredis/src/: kvhredis.c  kvhredis_internal.h  kvhredis_key.c  kvhredis_rx.c  kvhredis_tx.c
Codes/V2X-HUB/Code/common/lib/kvhtcp/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/V2X-HUB/Code/common/lib/kvhtcp/src/: kvhtcp.c  kvhtcp_internal.h
Codes/V2X-HUB/Code/depend/protobuf/syntax/: CMakeLists.txt
Codes/V2X-HUB/Code/depend/protobuf/syntax/syntax/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/V2X-HUB/Code/module/csm/: CMakeLists.txt  Makefile  cmake_install.cmake  csm
Codes/V2X-HUB/Code/module/csm/src/: csm.c  csm.h  csm_dgm_if.c  csm_input_params.c  csm_smem_if.c
Codes/V2X-HUB/Code/module/csm/src/redis_if/: csm_redis_if.c  csm_redis_pb.cc
Codes/V2X-HUB/Code/module/dmsdcm/: CMakeLists.txt
Codes/V2X-HUB/Code/module/dmsdcm/src/: dmsdcm.c  dmsdcm.h  dmsdcm_dgm_if.c  dmsdcm_dms_if.c  dmsdcm_input_params.c  dmsdcm_pb.cc  dmsdcm_redis_if.c
Codes/V2X-HUB/Code/module/hdem/: CMakeLists.txt
Codes/V2X-HUB/Code/module/hdem/src/: hdem.c  hdem.h  hdem_dgm_if.c  hdem_hmi_if.c  hdem_input_params.c  hdem_rsdpr.c  hdem_status_data_trx.c
Codes/V2X-HUB/Code/module/ivdctdcm/: CMakeLists.txt  Makefile  cmake_install.cmake  ivdctdcm
Codes/V2X-HUB/Code/module/ivdctdcm/src/: Untitled-2.c  ivdctdcm.c  ivdctdcm.h  ivdctdcm_dgm_if.c  ivdctdcm_input_params.c  ivdctdcm_ivdct_if.c  ivdctdcm_pb.cc  ivdctdcm_pb_c.h  ivdctdcm_redis_if.c  make.c
Codes/V2X-HUB/Code/module/smem/: CMakeLists.txt  Makefile  cmake_install.cmake  smem
Codes/V2X-HUB/Code/module/smem/src/: smem.c  smem.h  smem_input_params.c
Codes/V2X-HUB/Code/module/smem/src/csm_if/: smem_csm_if.c
Codes/V2X-HUB/Code/module/smem/src/dgm_if/: smem_dgm_if.c
Codes/V2X-HUB/Code/module/smem/src/ltev2x_if/: ltev2x.c  ltev2x.h  ltev2x_dot2.c  ltev2x_dot3.c  ltev2x_j29451.c
Codes/V2X-HUB/Code/module/smem/src/redis_if/: smem_redis_if.c  smem_redis_pb.cc
Codes/V2X-HUB/Code/module/smem/src/sidelink_if/: smem_sidelink_if.c
Codes/기업과제(V2X J2735 메시지 포워딩)/Code/src/app/keti_relay_inno/: CMakeLists.txt  Makefile
Codes/기업과제(V2X J2735 메시지 포워딩)/Code/src/app/keti_relay_inno/include/: relay-extern-defines.h  relay-extern-params.h  relay-extern-type.h  relay-internal-system.h  relay_config.h  relay_gnss.h  relay_main.h  relay_utils.h
Codes/기업과제(V2X J2735 메시지 포워딩)/Code/src/app/keti_relay_inno/src/: relay_config.c  relay_gnss.c  relay_main.c  relay_utils.c
Codes/모바일IP/Code/: CMakeLists.txt
Codes/모바일IP/Code/src/app/SAMPLE_APP/Agent/: Makefile  cmake_install.cmake
Codes/모바일IP/Code/src/app/SAMPLE_APP/Node/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/모바일IP/Code/src/app/SAMPLE_APP/RSU/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/모바일IP/Code/src/app/V2XHO/: CMakeLists.txt  Makefile  cmake_install.cmake  v2x_handover
Codes/모바일IP/Code/src/app/V2XHO/include/: v2x_handover_debug_pingtest.h  v2x_handover_main.h  v2x_handover_obu.h  v2x_handover_rsu_fa.h  v2x_handover_rsu_ha.h  v2x_handover_util_gnss.h  v2x_handover_util_router.h  v2x_handover_util_uds.h
Codes/모바일IP/Code/src/app/V2XHO/src/: v2x_handover_debug_pingtest.c  v2x_handover_main.c  v2x_handover_obu.c  v2x_handover_rsu_fa.c  v2x_handover_rsu_ha.c  v2x_handover_util_dashboard.c  v2x_handover_util_gnss.c  (+7 more)
Codes/모바일IP/Code/src/libs/Agent/: V2XHO_Agent.c  V2XHO_Agent.h  V2XHO_Agent_API.h  V2XHO_Agent_Define.h
Codes/모바일IP/Code/src/libs/Common/: V2XHO_Common.c  V2XHO_Common.h  V2XHO_Common_API.h  V2XHO_Common_Define.h  V2XHO_Common_Include.h
Codes/모바일IP/Code/src/libs/Node/: V2XHO_Node.c  V2XHO_Node.h  V2XHO_Node_API.h  V2XHO_Node_Define.h  V2XHO_Node_Include.h
Codes/모바일IP/Code/src/libs/Router/: V2XHO_Router.c  V2XHO_Router.h  V2XHO_Router_API.h  V2XHO_Router_Define.h  V2XHO_Router_IPv6.c  V2XHO_Router_Include.h
(+774 files in other folders)
